# ccd

./: .flake8  .gitignore  CLAUDE.md  README.md  inference_scalability_tables.tex  linter.sh  main.py  make_release.py  pyproject.toml  run_scenario_3.py  scalability.py  scalability_tables.tex  sensitivity.py  sensitivity_tables.tex  type_checker.sh  unit_tests.sh
ccd/: __init__.py  ccd.py  graph_ops.py  inference.py  perturb.py  scenario.py  simulator.py  system.py
examples/: correlation_matrices.py  inference_scalability.py  run_scenario_1.py  run_scenario_2.py  run_scenario_3.py  run_scenario_5g.py  run_scenario_ics.py  scalability.py  sensitivity.py
lean/: CCD.lean  README.md  lake-manifest.json  lakefile.toml
lean/CCD/: Algorithm.lean  AttackGraph.lean  Basic.lean  CausalModel.lean  Checkable.lean  Containment.lean  Degradation.lean  Functionality.lean
src/ccd/: __init__.py  __version__.py  base_system.py  ccd.py  graph_ops.py  illustrative_example_system.py  perturb.py  scenario.py  simulator.py
src/ccd/dto/: __init__.py  ccd_result.py  criteria_result.py  intervention.py  outcome.py
src/ccd/system/: __init__.py  five_g_system.py  five_g_testbed_system.py  ics_system.py  ics_testbed_system.py  illustrative_example_system.py  it_testbed_system.py  system_model.py
src/ccd/util/: __init__.py  graph_util.py  inference_util.py  perturb_util.py  scenario_util.py  sort_util.py
testbeds/5g_ran/: .gitignore  PHASE2_PLAN.md  README.md
testbeds/5g_ran/docker/: compose-core.yml  compose-smoke.yml
testbeds/5g_ran/scripts/: collection.py  enact_mode.py  generate_compose.py  generate_dataset.py  ran_lib.py  ranctl.py  run_ccd.py  testbed.py  udp_load.py  validate_phi.py
testbeds/5g_ran/spike/: Dockerfile.srsran  Dockerfile.srsue  gnb.yml  ue.conf
testbeds/5g_ran/tests/: test_ran_lib.py
testbeds/ics/: README.md
testbeds/ics/evaluation/: evaluation.txt
testbeds/ics/scripts/: collection.py  enact_mode.py  generate_compose.py  generate_dataset.py  ics_lib.py  icsctl.py  plot_evaluation.py  run_ccd.py  testbed.py  validate_phi.py
testbeds/it_system/: README.md
tests/: test_ccd.py  test_five_g_system.py  test_five_g_testbed_system.py  test_ics_system.py  test_it_testbed_system.py
(+46 files in other folders)
