[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ccd"
version = "0.1.0"
description = "Causal Controlled Degradation (CCD) — illustrative example from Hammar, Lupu, Alpcan, 'Cyber Resilience through Controlled Degradation'"
requires-python = ">=3.10"
dependencies = [
    "dowhy>=0.12",
    "networkx>=3.0",
    "numpy>=1.23",
    "pandas>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "flake8>=6.0", "mypy>=1.0", "pandas-stubs", "types-networkx"]
plot = ["matplotlib>=3.5"]

[tool.setuptools.packages.find]
include = ["ccd*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
files = ["ccd", "tests", "run_scenario_1.py", "run_scenario_2.py", "run_scenario_3.py", "scalability.py", "inference_scalability.py"]
