[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-controlled-degradation"
dynamic = ["version"]
description = "Causal Controlled Degradation (CCD)"
requires-python = ">=3.10"
dependencies = [
    "dowhy>=0.12",
    "networkx>=3.0",
    "numpy>=1.23",
    "pandas>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "flake8>=6.0", "mypy>=1.0", "pandas-stubs", "types-networkx"]
testbed = ["aiohttp>=3.9"]
plot = ["matplotlib>=3.5"]
release = ["build>=1.0", "twine>=4.0"]

[tool.setuptools.dynamic]
version = {attr = "ccd.__version__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ccd*"]

[tool.setuptools.package-data]
ccd = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests", "testbeds/it_system/tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
mypy_path = "src:testbeds/it_system/scripts"
explicit_package_bases = true
files = ["src/ccd", "tests", "examples", "testbeds/it_system/scripts", "testbeds/it_system/tests"]
